Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58941

Disconnecting client

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9.1
    • 5.8.0, 5.9.0 Alpha
    • None
    • BlueZ 5.43, tried again with 5.42, no changes
      embedded linux on Lubuntu 14.04 base with BLE chip

    Description

      I am trying out the heartbeat example.
      When I connect with another device to the heartrate server, I can successfully read the services and also subscribe characteristics.

      If i disconnect from the server, following error is thrown:
      udooer@udooneo:~$ sudo ./heartrate-server
      qt.bluetooth.bluez: sending error response; request: 10 handle: 3 code: 2
      qt.bluetooth.bluez: sending error response; request: 10 handle: 3 code: 2
      qt.bluetooth.bluez: void QBluetoothSocketPrivate::_q_readNotify() 8 error: -1 "Connection reset by peer"
      restarting service
      qt.bluetooth.bluez: received advertising error

      So the heartrate server can't restart the advertisement by calling QtLowEnergyController::startAdvertising(...).
      If I comment the line, which tries to startAdvertising again, the error is thrown, too but without the last line "[...] received advertising error".

      In a prerelease version of 5.8.0, the server worked properly

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ablasche Alex Blasche
            berat66 Berat Acikgöz
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes